# demo

./: .gitignore  Cargo.toml  README.md  REDAME.md  db.yaml  path.temp  req.http
.cargo/: config.toml
.github/workflows/: github-actions-demo.yml
keys/: server.crt  server.key
src/: .gitignore  clap.rs  db.rs  index.html  js.rs  main.rs  router.rs  test.html  test2.html  test3.html  tree.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: clap.rs  commands.rs  db.rs  graph.rs  main.rs
src/js/: ajaxhook-3.0.3.min.js  force-directed.js  node.js
src/script/: chart_page.js  file_upload.js  mock.js  mockData.js  record_curd.js  util.js
static/: api.html  html.html  index.html  template.html
static/js/: history.js
static/pages/: api.js  api.json  mock.js  nav.js  site.json  template.js  url.js
temp/: thunder-collection_urlmock.json
temp/pages/: site.json
