[package]
name = "urlmock"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.21"
boa_engine = "0.18.0"
salvo = { version = "0.67.2", features = ["serve-static", "quinn", "logging"] }
tokio = { version = "1.37.0", features = ["macros"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
serde_yaml = "0.9.34+deprecated"
thiserror = "1.0.60"
clap = { version = "4.5.4", features = ["derive"] }
