[package]
name = "myrecord"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8.5"

#rbatis支持，版本必须保持一致(必须)
rbs = { version = "4.5" }
rbatis = { version = "4.5" }
rbdc-sqlite = { version = "4.5" }
tokio = { version = "1", features = ["full"] }
log = "0.4"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
clap = { version = "4.5.4", features = ["derive"] }

regex = "1.10.4"


[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
